Inject current year instead of entire date

--- a/_templates/footer.html
+++ b/_templates/footer.html
@@ -6,7 +6,7 @@
 {% block extrafooter %}
 <div role="contentinfo">
     <p>
-        Copyright &copy; {{ now.year }} <a href="{{ copyright_url }}">{{ copyright }}</a>.
+        Copyright &copy; {{ current_year }} <a href="{{ copyright_url }}">{{ copyright }}</a>.
 
         {% if commit %}
             <span class="commit">
